# luapilot_standalone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_fr.md  build_and_deploy.sh  build_local.sh  clear_code.sh  main.lua  notes.md  release.sh  run_tests.sh  smoke_test_network.sh  todo  todo_find.txt  uninstall_babet.sh  uninstall_luapilot.sh
docs/: build_doc.sh  manual_order_en.txt  manual_order_fr.txt  preprocess_pdf.py
docs/assets/: README.md
docs/en/: README.md  cookbook.md  getting-started.md  security.md
docs/en/modules/: argparse.md  exec.md  fs.md  http.md  inotify.md  json.md  logging.md  signal.md  socket.md  sqlite.md  strings.md  sys.md  tables.md  time.md  tls.md  toml.md  user.md  workers.md
docs/fr/: README.md  cookbook.md  getting-started.md  security.md
docs/fr/modules/: argparse.md  exec.md  fs.md  http.md  inotify.md  json.md  logging.md  signal.md  socket.md  sqlite.md  strings.md  sys.md  tables.md  time.md  tls.md  toml.md  user.md  workers.md
examples/: main.lua  main_fr.lua  test_interrupt.lua
examples/mymod/: init.lua
src/: main.cpp  version.hpp.in
src/lua_bindings/: attributes.cpp  attributes.hpp  blake2b.cpp  blake2b.hpp  blake2s.cpp  blake2s.hpp  chdir.cpp  chdir.hpp  checksum_utils.cpp  checksum_utils.hpp  copy.cpp  copy.hpp  copyTree.cpp  copyTree.hpp  crc32.cpp  crc32.hpp  currentDir.cpp  currentDir.hpp  deepCopyTable.cpp  deepCopyTable.hpp  evp_md_ctx_raii.hpp  exec.cpp  exec.hpp  fileExists.cpp  fileExists.hpp  fileIterator.cpp  fileIterator.hpp  fileOperations.cpp  fileOperations.hpp  fileSize.cpp  fileSize.hpp  fileUtils.cpp  fileUtils.hpp  find.cpp  find.hpp  helloThere.cpp  helloThere.hpp  http.cpp  http.hpp  inotify.cpp  (+77 more)
src/project_core/: bundled_modules.cpp  bundled_modules.hpp  create_executable.cpp  create_executable.hpp  embedded_searcher.cpp  embedded_searcher.hpp  executable_path.cpp  executable_path.hpp  help.cpp  help.hpp  loadLuaFile.cpp  loadLuaFile.hpp  loadLuaFromZip.cpp  loadLuaFromZip.hpp  zip_utils.cpp  zip_utils.hpp
test/: main.lua  main_fr.lua
test/mymod/: init.lua
tools/: embed_lua_module.sh
